amelioration responsive + amelioration heart + ajout des pages menu

--- a/P3_PAYS_code/src/menu_html/restaurant_la_palette_du_gout.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_la_palette_du_gout.html
@@ -30,7 +30,7 @@
 
             <div class="menu gray">
                 <div class="menu-title__info">
-                    <p class="title menu-title__text">À la française</p>
+                    <p class="title menu-title__text">La palette du goût</p>
                     <span class="heart">
                         <span class="fa-stack">
                             <i class="fa-regular fa-heart fa-stack-1x"></i>
@@ -47,9 +47,9 @@
                     
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Tartare de poulpe acidulé</p>
+                            <p class="text menu-item__text">Fricassée d'escargot</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Aux zestes d'orange</p>
+                                <p class="text text_trunc">Au piment d'Espelette</p>
                                 <p class="text menu-item__price">25€</p>
                             </div>
                         </div>
@@ -63,9 +63,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Velouté de légumes d'antan</p>
+                            <p class="text menu-item__text">Foie gras de canard mi-cuit</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc" >Carotte, panais, topinambour</p>
+                                <p class="text text_trunc" >Et ses copeaux de truffe noire</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>
@@ -78,9 +78,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Soupe à l'oignon</p>
+                            <p class="text menu-item__text">Oeuf au plat</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisitée</p>
+                                <p class="text text_trunc">Assaisonné à la truffe sur lit de caviar</p>
                                 <p class="text menu-item__price">20€</p>
                             </div>
                         </div> 
@@ -99,9 +99,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Coquilles Saint-Jacques</p>
+                            <p class="text menu-item__text">Filet de boeuf aux herbes</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Accompagnées d'une purée de panais</p>
+                                <p class="text text_trunc">Accompagné de sa ribambelle de légumes</p>
                                 <p class="text menu-item__price">40€</p>
                             </div>
                         </div>
@@ -114,9 +114,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Magret de canard</p>
+                            <p class="text menu-item__text">Parmentier de queue de boeuf</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et parmentier de pommes de terre</p>
+                                <p class="text text_trunc">À la truffe noire sur sa purée de panais</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>  
@@ -129,9 +129,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pigeonneau d’Ille-et-Vilaine</p>
+                            <p class="text menu-item__text">Filet de turbot</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Sur son lit de gnocchis aux légumes</p>
+                                <p class="text text_trunc">Aux agrumes</p>
                                 <p class="text menu-item__price">44€</p>
                             </div>
                         </div>
@@ -151,9 +151,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pétales de violettes glacés</p>
+                            <p class="text menu-item__text">Paris-Brest</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et purée de noisettes</p>
+                                <p class="text text_trunc">Revisité</p>
                                 <p class="text menu-item__price">18€</p>
                             </div>
                         </div>
@@ -167,9 +167,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Fondant au chocolat</p>
+                            <p class="text menu-item__text">Macaron au chocolat d'exception</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisité</p>
+                                <p class="text text_trunc">Et glace à la vanille de Madagascar</p>
                                 <p class="text menu-item__price">22€</p>
                             </div>
                         </div>  
@@ -183,9 +183,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Millefeuille croustillant</p>
+                            <p class="text menu-item__text">Mousse au chocolat</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Myrtilles et pâte d’amande</p>
+                                <p class="text text_trunc">Au piment d'Espelette et à la truffe noire</p>
                                 <p class="text menu-item__price">23€</p>
                             </div>
                         </div>
