--- a/P3_PAYS_code/src/menu_html/restaurant_la_note.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_la_note.html
@@ -30,7 +30,7 @@
 
             <div class="menu gray">
                 <div class="menu-title__info">
-                    <p class="title menu-title__text">À la française</p>
+                    <p class="title menu-title__text">La note enchantée</p>
                     <span class="heart">
                         <span class="fa-stack">
                             <i class="fa-regular fa-heart fa-stack-1x"></i>
@@ -47,9 +47,9 @@
                     
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Tartare de poulpe acidulé</p>
+                            <p class="text menu-item__text">Ravioles de foie gras</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Aux zestes d'orange</p>
+                                <p class="text text_trunc">Accompagnés de leur crème à la truffe</p>
                                 <p class="text menu-item__price">25€</p>
                             </div>
                         </div>
@@ -63,9 +63,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Velouté de légumes d'antan</p>
+                            <p class="text menu-item__text">Caviar osciètre</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc" >Carotte, panais, topinambour</p>
+                                <p class="text text_trunc" >Sur blini à la farine de blé noir</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>
@@ -78,10 +78,25 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Soupe à l'oignon</p>
+                            <p class="text menu-item__text">Homard et espuma de potiron</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisitée</p>
+                                <p class="text text_trunc">Mariné aux zestes d'orange</p>
                                 <p class="text menu-item__price">20€</p>
+                            </div>
+                        </div> 
+                        <div class="check">
+                            <div class="check--anime">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="menu-item__container">
+                            <p class="text menu-item__text">Foie gras de canard cuit entier</p>
+                            <div class="menu-item__info">
+                                <p class="text text_trunc">Confiture de figue et pain toasté</p>
+                                <p class="text menu-item__price">35€</p>
                             </div>
                         </div> 
                         <div class="check">
@@ -99,9 +114,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Coquilles Saint-Jacques</p>
+                            <p class="text menu-item__text">Noix de coquilles Saint-Jacques</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Accompagnées d'une purée de panais</p>
+                                <p class="text text_trunc">Sur lit de purée de céleri-rave</p>
                                 <p class="text menu-item__price">40€</p>
                             </div>
                         </div>
@@ -114,9 +129,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Magret de canard</p>
+                            <p class="text menu-item__text">Langoustine poêlée</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et parmentier de pommes de terre</p>
+                                <p class="text text_trunc">Purée de patate douce</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>  
@@ -129,9 +144,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pigeonneau d’Ille-et-Vilaine</p>
+                            <p class="text menu-item__text">Mijoté de queue de boeuf</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Sur son lit de gnocchis aux légumes</p>
+                                <p class="text text_trunc">Et riz sauvage aux zestes de citron</p>
                                 <p class="text menu-item__price">44€</p>
                             </div>
                         </div>
@@ -151,9 +166,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pétales de violettes glacés</p>
+                            <p class="text menu-item__text">Macaron noisette et chocolat</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et purée de noisettes</p>
+                                <p class="text text_trunc">Glace au caramel brun et sel de Guérande</p>
                                 <p class="text menu-item__price">18€</p>
                             </div>
                         </div>
@@ -167,9 +182,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Fondant au chocolat</p>
+                            <p class="text menu-item__text">Baba au rhum revisité </p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisité</p>
+                                <p class="text text_trunc">Avec son coulis de citron</p>
                                 <p class="text menu-item__price">22€</p>
                             </div>
                         </div>  
@@ -183,9 +198,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Millefeuille croustillant</p>
+                            <p class="text menu-item__text">Tarte au citron meringuée</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Myrtilles et pâte d’amande</p>
+                                <p class="text text_trunc">Déstructurée</p>
                                 <p class="text menu-item__price">23€</p>
                             </div>
                         </div>
