--- a/P3_PAYS_code/src/menu_html/restaurant_le_delice.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_le_delice.html
@@ -30,7 +30,7 @@
 
             <div class="menu gray">
                 <div class="menu-title__info">
-                    <p class="title menu-title__text">À la française</p>
+                    <p class="title menu-title__text">Le délice des sens</p>
                     <span class="heart">
                         <span class="fa-stack">
                             <i class="fa-regular fa-heart fa-stack-1x"></i>
@@ -47,9 +47,9 @@
                     
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Tartare de poulpe acidulé</p>
+                            <p class="text menu-item__text">Tartare de thon</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Aux zestes d'orange</p>
+                                <p class="text text_trunc">Assaisonné au yuzu</p>
                                 <p class="text menu-item__price">25€</p>
                             </div>
                         </div>
@@ -63,9 +63,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Velouté de légumes d'antan</p>
+                            <p class="text menu-item__text">Bouchée de homard croustillant</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc" >Carotte, panais, topinambour</p>
+                                <p class="text text_trunc" >Et sa farandole de petits légumes</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>
@@ -78,9 +78,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Soupe à l'oignon</p>
+                            <p class="text menu-item__text">Velouté de cèpes </p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisitée</p>
+                                <p class="text text_trunc">Aux truffes</p>
                                 <p class="text menu-item__price">20€</p>
                             </div>
                         </div> 
@@ -99,9 +99,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Coquilles Saint-Jacques</p>
+                            <p class="text menu-item__text">Poulet rôti aux herbes de Provence</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Accompagnées d'une purée de panais</p>
+                                <p class="text text_trunc">Et sa crème de truffe</p>
                                 <p class="text menu-item__price">40€</p>
                             </div>
                         </div>
@@ -114,9 +114,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Magret de canard</p>
+                            <p class="text menu-item__text">Langouste rôtie</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et parmentier de pommes de terre</p>
+                                <p class="text text_trunc">Et ses légumes de saison</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>  
@@ -129,9 +129,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pigeonneau d’Ille-et-Vilaine</p>
+                            <p class="text menu-item__text">Côte de boeuf Angus</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Sur son lit de gnocchis aux légumes</p>
+                                <p class="text text_trunc">Et sa purée de panais</p>
                                 <p class="text menu-item__price">44€</p>
                             </div>
                         </div>
@@ -151,9 +151,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Pétales de violettes glacés</p>
+                            <p class="text menu-item__text">Farandole de desserts</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Et purée de noisettes</p>
+                                <p class="text text_trunc">Du chef</p>
                                 <p class="text menu-item__price">18€</p>
                             </div>
                         </div>
@@ -167,9 +167,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Fondant au chocolat</p>
+                            <p class="text menu-item__text">Crème brulée</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Revisité</p>
+                                <p class="text text_trunc">Revisitée</p>
                                 <p class="text menu-item__price">22€</p>
                             </div>
                         </div>  
@@ -183,9 +183,9 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text">Millefeuille croustillant</p>
+                            <p class="text menu-item__text">Tiramisu</p>
                             <div class="menu-item__info">
-                                <p class="text text_trunc">Myrtilles et pâte d’amande</p>
+                                <p class="text text_trunc">À la noisette</p>
                                 <p class="text menu-item__price">23€</p>
                             </div>
                         </div>
